--- a/src/components/PostViewer/PostViewer.scss
+++ b/src/components/PostViewer/PostViewer.scss
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 50vw;
+    width: 80%;
     height: auto;
     margin: 0 auto;
     box-shadow: 0 0 5px rgb(59, 59, 59);
     border-radius: 15px;
+    background-color: #fff;
 }
