Add min and max width on the container and starting button left

--- a/src/components/ContainerResize/ContainerResize.scss
+++ b/src/components/ContainerResize/ContainerResize.scss
@@ -6,7 +6,9 @@
     #Resizable{
         border-radius: 10px;
         height: auto;
-        width: 80%;
+        width: 60%;
+        min-width: 40%;
+        max-width: 80%;
         padding: 50px;
         background: rgb(238,174,202);
         background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
