--- a/src/components/ContainerResize/ContainerResize.scss
+++ b/src/components/ContainerResize/ContainerResize.scss
@@ -2,17 +2,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 80px;
 
     #Resizable{
         border-radius: 10px;
         height: auto;
-        width: 60%;
-        min-width: 40%;
-        max-width: 80%;
+        width: 950px;
+        min-width: 550px;
+        max-width: 950px;
         padding: 50px;
         background: rgb(238,174,202);
         background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     }
+    
     #Draggable{
         background: rgb(255, 255, 255);
         border: 1px solid black;
