--- a/src/components/PostViewer/PostViewer.scss
+++ b/src/components/PostViewer/PostViewer.scss
@@ -2,10 +2,13 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
+    max-width: 80%;
+    min-width: 60%;
     height: auto;
     margin: 0 auto;
     box-shadow: 0 0 5px rgb(59, 59, 59);
     border-radius: 15px;
     background-color: #fff;
+    padding: 20px 30px;
 }
