--- a/src/components/ContainerResize/ContainerResize.scss
+++ b/src/components/ContainerResize/ContainerResize.scss
@@ -1,21 +1,25 @@
-.containerResize{
+.containerResize {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 80px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 
-    #Resizable{
+    #Resizable {
         border-radius: 10px;
         height: auto;
         width: 950px;
         min-width: 550px;
         max-width: 950px;
         padding: 50px;
-        background: rgb(238,174,202);
-        background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+        background: rgb(238, 174, 202);
+        background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
     }
-    
-    #Draggable{
+
+    #Draggable {
         background: rgb(255, 255, 255);
         border: 1px solid black;
         cursor: col-resize;
@@ -23,7 +27,7 @@
         width: 10px;
         border-radius: 50%;
 
-        &:hover{
+        &:hover {
             height: 15px;
             width: 15px;
         }
