--- a/src/components/PostViewer/ContentPostViewer/ContentPostViewer.scss
+++ b/src/components/PostViewer/ContentPostViewer/ContentPostViewer.scss
@@ -1,10 +1,10 @@
-.contentContainer{
+.contentContainer {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     padding: 10px 0;
 
-    .paragraph{
+    .paragraph {
         text-align: left;
         font-size: 20px;
         font-weight: 500;
