--- a/src/components/PostViewer/PostViewer.scss
+++ b/src/components/PostViewer/PostViewer.scss
@@ -9,6 +9,7 @@
     margin: 0 auto;
     box-shadow: 0 0 5px rgb(59, 59, 59);
     border-radius: 15px;
-    background-color: #fff;
+    background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 27%, rgba(255,255,255,1) 60%, rgba(242,242,242,1) 80%, rgba(240,240,240,1) 96%);
     padding: 20px 30px;
 }
