--- a/src/components/ContainerResize/ContainerResize.scss
+++ b/src/components/ContainerResize/ContainerResize.scss
@@ -5,8 +5,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-right: -50%;
     transform: translate(-50%, -50%);
+    margin-right: -50%;
 
     #Resizable {
         border-radius: 10px;
@@ -14,7 +14,7 @@
         width: 950px;
         min-width: 550px;
         max-width: 950px;
-        padding: 50px;
+        padding: 100px 50px;
         background: rgb(238, 174, 202);
         background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
     }
