--- a/src/components/ContainerResize/ContainerResize.scss
+++ b/src/components/ContainerResize/ContainerResize.scss
@@ -2,11 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-right: -50%;
+    margin-top: 20px;
 
     #Resizable {
         border-radius: 10px;
@@ -14,9 +10,8 @@
         width: 950px;
         min-width: 550px;
         max-width: 950px;
-        padding: 100px 50px;
-        background: rgb(238, 174, 202);
-        background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+        padding: 50px 50px;
+        background-image: linear-gradient(150deg, rgb(95, 108, 138), rgb(48, 59, 94), rgb(14, 18, 38));
     }
 
     #Draggable {
