--- a/src/components/PostViewer/PostViewer.scss
+++ b/src/components/PostViewer/PostViewer.scss
@@ -13,3 +13,9 @@
 background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 27%, rgba(255,255,255,1) 60%, rgba(242,242,242,1) 80%, rgba(240,240,240,1) 96%);
     padding: 20px 30px;
 }
+
+.quote-container{
+    .container{
+        max-width: 100%;
+    }
+}
