--- a/src/components/PostViewer/ContentPostViewer/ContentPostViewer.scss
+++ b/src/components/PostViewer/ContentPostViewer/ContentPostViewer.scss
@@ -10,15 +10,19 @@
     .img-container {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         margin-top: 20px;
         width: 100%;
         text-align: center;
 
-        img {
-            width: 99%;
-            height: auto;
-            text-align: center;
-            max-height: 400px;
+        div{
+            width: 50%;
+            img {
+                max-width: 99%;
+                height: auto;
+                text-align: center;
+                max-height: 400px;
+            }
         }
     }
 }
